[gd_scene load_steps=3 format=3 uid="uid://bn2a1je1fc0ge"]

[ext_resource type="Script" uid="uid://drb6xc556uhuc" path="res://high_level_example/scripts/main.gd" id="1_f1qr7"]
[ext_resource type="Texture2D" uid="uid://dkgswvhlwdckc" path="res://images.jpeg" id="4_y3o8n"]

[node name="Main" type="Node2D"]
script = ExtResource("1_f1qr7")

[node name="Game" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 650.0
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Game"]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.905
anchor_bottom = 16.23
offset_left = 10.0
offset_top = 587.0
offset_right = -32097.8
offset_bottom = -9914.5
grow_horizontal = 2
grow_vertical = 2

[node name="Text" type="LineEdit" parent="Game/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Game/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Eingabe"

[node name="ReadyL" type="Label" parent="Game"]
layout_mode = 0
offset_left = 441.0
offset_top = 29.0
offset_right = 481.0
offset_bottom = 52.0

[node name="Resultlabel" type="Label" parent="Game"]
layout_mode = 0
offset_left = 461.0
offset_top = 207.0
offset_right = 501.0
offset_bottom = 230.0

[node name="TextureRect" type="TextureRect" parent="Game"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 28.844
anchor_bottom = 16.2
offset_left = 514.0
offset_top = 263.0
offset_right = -32556.6
offset_bottom = -10167.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_y3o8n")
expand_mode = 1

[node name="PlayerList" type="Label" parent="Game"]
layout_mode = 0
offset_left = 327.0
offset_top = 96.0
offset_right = 434.0
offset_bottom = 134.0

[node name="VBoxContainer" type="VBoxContainer" parent="Game"]
layout_mode = 0
offset_right = 152.0
offset_bottom = 214.0

[node name="Messages" type="TextEdit" parent="Game/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Game/VBoxContainer"]
layout_mode = 2

[node name="Message" type="LineEdit" parent="Game/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Send" type="Button" parent="Game/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Send"

[node name="ReadyB" type="Button" parent="Game"]
layout_mode = 0
offset_left = 452.0
offset_top = 398.0
offset_right = 679.0
offset_bottom = 440.0
text = "Ready"

[node name="Connect" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="Connect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.5
offset_top = -44.0
offset_right = 136.5
offset_bottom = 25.75
grow_horizontal = 2
grow_vertical = 2

[node name="NameEdit" type="LineEdit" parent="Connect/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Connect/VBoxContainer"]
layout_mode = 2

[node name="Server" type="Button" parent="Connect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="Client" type="Button" parent="Connect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join
"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 325)

[connection signal="pressed" from="Game/VBoxContainer/HBoxContainer/Send" to="." method="_on_send_pressed"]
[connection signal="pressed" from="Game/ReadyB" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Connect/VBoxContainer/HBoxContainer/Server" to="." method="_on_server_pressed"]
[connection signal="pressed" from="Connect/VBoxContainer/HBoxContainer/Client" to="." method="_on_client_pressed"]
